[tool.poetry]
name = "eli"
version = "0.2.0"
readme = "README.md"
homepage = "https://github.com/shawwn/eli"
description = "Emacs Lisp runtime interface for Python"
authors = ["Shawn Presser"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Shawn Presser's Website" = "https://www.shawwn.com"
"Support Shawn Presser on Patreon" = "https://www.patreon.com/shawwn"
"@theshawwn on Twitter" = "https://www.twitter.com/theshawwn"
"sillysaurusx on Hacker News" = "https://news.ycombinator.com/threads?id=sillysaurusx"
